--- a/mapping.json
+++ b/mapping.json
@@ -48,6 +48,29 @@
                   "SandboxUrl":""
                }
             ]
+         },
+         {
+            "Name":"Numpy",
+            "SandboxUrl":"",
+            "Path":"1.numpy/1.1.numpy.md",
+            "Module":"Kickstart",
+            "Slides":[
+               {
+                  "Name": "Arrays",
+                  "Path":"1.numpy/1.2.arrays.md",
+                  "SandboxUrl":""
+               },
+               {
+                  "Name":"Math",
+                  "Path":"1.numpy/1.3.math.md",
+                  "SandboxUrl":"https://repl.it/@mokhleselheni/Numpy"
+               },
+               {
+                  "Name":"Indexing",
+                  "Path":"1.numpy/1.4.Indexing.md",
+                  "SandboxUrl":""
+               }
+            ]
          }
       ],
       "Modules":[
@@ -67,5 +90,5 @@
    },
    "Backup":true,
    "BackupOldMap":true,
-   "MigrationVersion":1
+   "MigrationVersion":2
 }
